--- a/HR Analysis.ipynb
+++ b/HR Analysis.ipynb
@@ -445,6 +445,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73487d89",
+   "metadata": {},
+   "source": [
+    "## Pie Plot for employee different features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "cb0ec2d0",
@@ -541,6 +549,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "650625eb",
+   "metadata": {},
+   "source": [
+    "## Employee Distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "722dfa47",
@@ -592,6 +608,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68a89cb3",
+   "metadata": {},
+   "source": [
+    "## Comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "2ee06df2",
@@ -629,6 +653,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6513708b",
+   "metadata": {},
+   "source": [
+    "## Feature Left Correlation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "ea685451",
@@ -660,6 +692,14 @@
     "    # Show the plot\n",
     "    plt.show()\n",
     "corr_with_left(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f39be3",
+   "metadata": {},
+   "source": [
+    "## Employee Churn Analysis"
    ]
   },
   {
@@ -707,6 +747,14 @@
     "    plt.show()\n",
     "\n",
     "histogram(df, 'satisfaction_level')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f6eaf3d",
+   "metadata": {},
+   "source": [
+    "## Kmeans Clustering"
    ]
   },
   {
